--- a/workspace_spring/DataPractice/src/main/resources/templates/main_2.html
+++ b/workspace_spring/DataPractice/src/main/resources/templates/main_2.html
@@ -8,8 +8,8 @@
 <body>
   <form action="/input2" method="post">
     <h1>학생 성적 입력 프로그램</h1> <br>
-    [[${main1VO.getName}]] 학생의 기본 정보를 입력합니다 <br>
-    <input type="hidden" name="name" th:value="${main1VO.getName}">
+    [[${main3VO.getName}]] 학생의 기본 정보를 입력합니다 <br>
+    <input type="hidden" name="name" th:value="${main3VO.getName}">
     학년
     <input type="text" name="grade"> <br>
     연락처
@@ -20,7 +20,7 @@
     <input type="text" name="ndNum"> <br>
     성별
     <input type="radio" name="gender" value="male">남
-    <input type="radio" name="gender" value="female">여
+    <input type="radio" name="gender" value="female">여 <br>
     <input type="submit" value="확인">
     <input type="submit" value="뒤로가기">
   </form>
