--- a/workspace_spring/DataPractice/src/main/resources/templates/main_4.html
+++ b/workspace_spring/DataPractice/src/main/resources/templates/main_4.html
@@ -16,6 +16,12 @@
       국어: [[${main3VO.getKrScore}]]<br>
       수학: [[${main3VO.getMaScore}]]<br>
       영어: [[${main3VO.getEnScore}]]<br>
+      <!-- 자바에서 연산 후 가지고오는 방법 -->
+      평균1: [[${avg}]]
+      <!-- 타입리프를 활용한 html내에서의 연산법 -->
+      평균2: [[${(main3VO.getKrScore + main3VO.getEnScore +main3VO.getMaScore) / 3.0}]]
+      <!-- 타입리프를 주석처리하려면 타임리프 문장 앞 뒤로 /* */ -->
+       <!-- /*[[${avg}]] */ -->
       <input type="submit" value="타이틀로">
     </form>
     
