--- a/workspace_spring/DB_Score/src/main/resources/templates/reg_student.html
+++ b/workspace_spring/DB_Score/src/main/resources/templates/reg_student.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <form action="/insert" method="post">
+  <form action="/stuInsert" method="post">
     <div>
       학번 <input type="text" name="stuNum"> <br>
       이름 <input type="text" name="stuName"> <br>
