--- a/etc/Exam/main.css
+++ b/etc/Exam/main.css
@@ -90,15 +90,16 @@ li{
   position: relative;
 }
 .icon i{
-  border: 60px solid white;
   background-color: white;
-  width: 80px;
-  height: 80px;
-  border-radius:50%;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  padding-top: 30px;
   color: orange;
+  font-size: 30px;
   position: absolute;
-  left: 20px;
-  bottom: 20px;
+  left: 33px;
+  bottom: 30px;
   
 }
 .stTail>:first-child div{
