--- a/etc/Exam/reg_tool.css
+++ b/etc/Exam/reg_tool.css
@@ -1,15 +1,16 @@
 td{
-  border: 1px solid gray;
+
   padding: 10px;
   outline: none;
-  box-shadow: gray;
+  box-shadow: 0px 0px 6px lightgray;  
 }
 tr{
   padding: 10px;
   outline: none;
+  box-shadow: 0px 0px 6px lightgray;
 }
 tr td:first-child{
-  background-color: lightgray;
+  background-color: #eeeeee;
   width: 150px;
   font-weight: bolder;
 }
@@ -23,6 +24,9 @@ span{
 .second>div>p{
   margin-top: 50px;
 }
+.second>table{
+  width: 100%;
+}
 .container{
   margin:0 auto;
   width: 1000px;
@@ -31,6 +35,8 @@ span{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 12px;
+  
 }
 .first{
   margin-top: 20px;
