--- a/etc/Exam/reg_tool.css
+++ b/etc/Exam/reg_tool.css
@@ -1,16 +1,18 @@
 td{
-
   padding: 10px;
-  outline: none;
-  box-shadow: 0px 0px 6px lightgray;  
+  border: 1px solid rgba(0, 0, 0, .2);
 }
 tr{
   padding: 10px;
-  outline: none;
-  box-shadow: 0px 0px 6px lightgray;
+  border: 1px solid #eeeeee;
+}
+table{
+  border: 1px solid #eeeeee;
+  border-top: 3px solid rgba(0, 0, 0, 0.2);
 }
 tr td:first-child{
-  background-color: #eeeeee;
+
+  background-color: #f1eaea;
   width: 150px;
   font-weight: bolder;
 }
