--- a/workspace_react/blog2/src/App.css
+++ b/workspace_react/blog2/src/App.css
@@ -1,5 +1,18 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  padding: 0 auto;
+}
+
+.content{
+  border: 1px solid black;
+  display: flex;
+  justify-content: space-around;
+}
+.etc{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .App-logo {
@@ -35,4 +48,24 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.blog-nav{
+  display: flex;
+  background-color: black;
+  color: white;
+  padding-left: 20px;
+}
+
+.list{
+  text-align: left;
+  padding-left: 20px;
+  border-bottom: 1px solid gray;
+}
+
+.detail{
+  background-color: #eeeeee;
+  text-align: left;
+  padding: 20px;
+  margin-top: 10px;
 }
