--- a/workspace_spring/Shop/src/main/frontend/src/App.css
+++ b/workspace_spring/Shop/src/main/frontend/src/App.css
@@ -178,3 +178,19 @@
     transform: translateY(-50px);
   }
 }
+
+/* validation 디자인 */
+.feedback{
+  font-size: 0.7rem;
+  margin-top: 4px;
+  /* display: none; */
+  visibility: hidden;
+}
+.feedback.error{
+  color: red;
+  visibility: visible;
+}
+.feedback.good{
+  color: rgb(110, 219, 2);
+  visibility: visible;
+}
