--- a/workspace_spring/Shop/src/main/frontend/src/page/user/List.css
+++ b/workspace_spring/Shop/src/main/frontend/src/page/user/List.css
@@ -1,17 +1,26 @@
-.user-list-div{
-  width: 50%;
+.item-list-div{
+  width: 90%;
   margin: 0 auto;
   padding: 30px;
   border-radius: 10px;
   background-color: rgba(230, 230, 230, 0.1);
   box-shadow: 3px 3px 6px #dddddd;
+  display: grid;
+  /* 컬럼의 크기와 개수 */
+  grid-template-columns: repeat(5, 1fr);
+  gap: 20px;
 }
-.item-one{
+.item-list-div>.item-one{
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
-.item-one>img{
-  width: 200px;
-  height: 150px;
+.item-list-div>.item-one>img{
+  width: 100%;
+  height: 300px;
+}
+.item-list-div>.item-one>h4{
+  padding: 6px 3px;
+}
+.item-list-div>.item-one>p{
+  padding: 3px;
 }
